crates/oxc_css_parser/tests/error/scss/value/map/invalid-map-key.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `;`, but found `...`
  ┌─ invalid-map-key.scss:1:21
  │
1 │ $id: inspect((a,b:c)...)
  │                     ^^^


